@@ -6,6 +6,8 @@ import org.testng.annotations.AfterClass;
 import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 public class Activity1 {
@@ -14,22 +16,17 @@ public class Activity1 {
 
 	// Set up method
 	@BeforeClass
-	public void setUp() throws MalformedURLException {
+	public void setUp() throws MalformedURLException, URISyntaxException {
 
 		// Desired Capabilities
 		UiAutomator2Options options = new UiAutomator2Options();
 		options.setPlatformName("android");
 		options.setAutomationName("UiAutomator2");
-		//options.setAppPackage("com.android.calculator2");
-		//options.setAppActivity(".Calculator");
-		options.setAppPackage("com.google.android.calculator");
-		options.setAppActivity("com.android.calculator2.Calculator");
+		options.setAppPackage("com.sec.android.app.popupcalculator");
+		options.setAppActivity("com.sec.android.app.popupcalculator.Calculator");
 		options.noReset();
 
-		// Server Address
-		@SuppressWarnings("deprecation")
-		URL serverURL = new URL("http://localhost:4723/");
-
+		URL serverURL = new URI("http://127.0.0.1:4723").toURL();
 		driver = new AndroidDriver(serverURL, options);
 	}
 
@@ -37,13 +34,13 @@ public class Activity1 {
 	@Test
 	public void multiplyTest() {
 		// Perform the calculation
-		driver.findElement(AppiumBy.id("digit_5")).click();
-		driver.findElement(AppiumBy.accessibilityId("multiply")).click();
-		driver.findElement(AppiumBy.id("digit_8")).click();
-	    driver.findElement(AppiumBy.accessibilityId("equals")).click();
-	    
+		driver.findElement(AppiumBy.accessibilityId("5")).click();
+		driver.findElement(AppiumBy.accessibilityId("Multiplication")).click();
+		driver.findElement(AppiumBy.accessibilityId("8")).click();
+		driver.findElement(AppiumBy.accessibilityId("Equal")).click();
+
 		// Find the result
-		String result = driver.findElement(AppiumBy.id("com.google.android.calculator:id/result_final")).getText();
+		String result = driver.findElement(AppiumBy.id("com.sec.android.app.popupcalculator:id/calc_edt_formula")).getText();
 
 		// Assertion
 		Assert.assertEquals(result, "40");
